<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#f000f0"
    android:columnCount="30"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvw1"
        android:layout_width="100dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="BOSE."
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ffff" />

    <EditText
        android:id="@+id/eTxtDemo"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDone"
        android:layout_column="0"
        android:layout_row="3"
        android:shadowColor="#ff00ff"
        android:background="#ff0000"
        android:text="@string/click"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn2"
        android:layout_column="1"
        android:layout_gravity="bottom"
        android:layout_row="3"
        android:background="#ff0000"
        android:text="@string/two"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btneq"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom|right"
        android:layout_row="3"
        android:background="#00ff00"
        android:text="@string/equal"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn3"
        android:layout_column="2"
        android:layout_row="3"
        android:background="#ff0000"
        android:text="@string/three"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn4"
        android:layout_column="0"
        android:layout_row="5"
        android:background="#ff0000"
        android:text="@string/four"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn5"
        android:layout_column="1"
        android:layout_row="5"
        android:background="#ff0000"
        android:text="@string/five"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn6"
        android:layout_column="2"
        android:layout_gravity="bottom"
        android:layout_row="5"
        android:background="#ff0000"
        android:text="@string/six"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnpl"
        android:layout_column="3"
        android:layout_row="5"
        android:background="#00ff00"
        android:text="@string/plus"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn7"
        android:layout_column="0"
        android:layout_row="7"
        android:background="#ff0000"
        android:text="@string/seven"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn8"
        android:layout_column="1"
        android:layout_row="7"
        android:background="#ff0000"
        android:text="@string/eight"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btn9"
        android:layout_column="2"
        android:layout_gravity="bottom"
        android:layout_row="7"
        android:background="#ff0000"
        android:text="@string/nine"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnst"
        android:layout_column="3"
        android:layout_gravity="bottom"
        android:layout_row="7"
        android:background="#00ff00"
        android:text="@string/mul"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnpo"
        android:layout_column="2"
        android:layout_row="9"
        android:background="#ff0000"
        android:text="@string/point"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btndiv"
        android:layout_column="3"
        android:layout_gravity="right"
        android:layout_row="9"
        android:background="#00ff00"
        android:text="@string/div"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btncls"
        android:layout_column="0"
        android:layout_row="11"
        android:background="#00ff00"
        android:text="@string/clear"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnmin"
        android:layout_column="1"
        android:layout_row="11"
        android:background="#00ff00"
        android:text="@string/min"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnmem"
        android:layout_column="2"
        android:layout_row="11"
        android:background="#00ff00"
        android:text="@string/men"
        android:textColor="#FF000000" />

    <Button
        android:id="@+id/btnmrc"
        android:layout_column="3"
        android:layout_row="11"
        android:background="#00ff00"
        android:text="@string/mrc"
        android:textColor="#FF000000" />

    <Space
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="88dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="81dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <Space
        android:layout_width="61dp"
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="68dp"
        android:layout_column="0"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="8" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="144dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:background="#ff0000"
        android:text="@string/zero"
        android:textColor="#FF000000" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="126dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="11" />

</GridLayout>